docs: 文档内容的修改

--- a/docs/JavaScript/原型和原型链.md
+++ b/docs/JavaScript/原型和原型链.md
@@ -7,7 +7,7 @@ tags:
  - 原型
 ---
 
----
+# {{ $frontmatter.title }}
 
 :boom: **出现背景**
 - 因为 js 万物皆对象，所以必须要有一种机制将所有对象连接起来。但是 js 的作者 Brendan Eich 并不打算引入 class 的概念，这样 js 就是一种完整的面向对象编程语言了，有点太过于正式
