--- a/docs/JavaScript/闭包.md
+++ b/docs/JavaScript/闭包.md
@@ -1,15 +1,11 @@
 ---
 title: 深入理解Javascript的闭包
-categories:
- - JavaScript
-tags:
- - js进阶
- - 闭包
- - 作用域
- - 作用域链
+editLink: true
 ---
 
-在开始讲闭包之前，我们需要理解作用域和作用域链..ddsdsdddddddddddddddddddddd
+# {{ $frontmatter.title }}
+
+在开始讲闭包之前，我们需要理解作用域和作用域链.
 
 ### 作用域链
 
