--- a/docs/Vue核心插件/前端路由.md
+++ b/docs/Vue核心插件/前端路由.md
@@ -7,6 +7,7 @@ tags:
 
 ---
 
+# {{ $frontmatter.title }}
 
 ## 传统页面
 - 在前端技术早期，一个 url 对应一个页面，如果要切换页面，就会重新进行html、css等静态资源的请求，组合成一个新的页面；显然，页面的不断请求对用户体验非常不友好。
