docs: 增加文档图片

--- a/docs/project/博客搭建.md
+++ b/docs/project/博客搭建.md
@@ -60,7 +60,7 @@ jobs:
 
 3. 接下来来到github的Developer setting（个人的下滑菜单-->Setting）页面，勾选上workflow，滑倒页脚update token。复制好提示出来的token
 
-![](https://gitee.com/xiaozhengtx/note-image/raw/master/initblog2.jpg)
+![](/initblog2.jpg)
 
 4. 来到仓库的Setting --> Secrets and variable --> Action，这时候New repository secret，起一个名字，把刚刚复制的token值粘贴到value中
 
@@ -71,13 +71,12 @@ jobs:
 :::
 
 :boom: 如果出现如下报错,上面`步骤3`可以解决
-![](https://gitee.com/xiaozhengtx/note-image/raw/master/initblog3.jpg)
 
+![](/initblog3.jpg)
 
 6. action成功之后，来到Setting的Pages页面，选择gh-pages然后Save，最后Visit site就可以看到自己搭建的网站啦！
 
-![](https://gitee.com/xiaozhengtx/note-image/raw/master/initblog1.jpg)
-
+![](/initblog1.jpg)
 :::tip
 gh-pages分支是在提交代码到master后自动生成的。不用自己新建，提交的代码也是直接提交到master中，github pages会自动帮你打包部署
 :::
