--- a/docs/html&css&js/html/基础知识.md
+++ b/docs/html&css&js/html/基础知识.md
@@ -65,7 +65,7 @@ html语义化是用正确的标签做正确的事情。
 
 ```
 常见的行内元素标签有：
-<a>，<span>，<strong>，`<i>`，<b>，<button>，<textarea>，`<em>`，<label>，<select>
+<a>，<span>，<strong>，<i>，<b>，<em>，<label>
 ```
 
 ##### 行内块元素
