feat: new and fixed some md file

--- a/docs/html&css&js/JavaScript/数组的方法.md
+++ b/docs/html&css&js/JavaScript/数组的方法.md
@@ -41,3 +41,10 @@
 - 重排序：reverse、sort
 - 数组转成字符串：join(用于连接数组元素的值)
 - 字符串转成数组元素：split(' ')，元素用逗号隔开
+
+
+::boom:: **数组去重的方法**
+- set() + Array.from()
+- 双层循环 + splice()
+- 循环 + includes/indexOf()：返回索引，没找到返回-1
+- filter()+indexOf()
