feat: update article

--- a/docs/webpack/开发模式.md
+++ b/docs/webpack/开发模式.md
@@ -7,6 +7,9 @@
     3. webpack返回打包结果给中间件输出到内存中
     4. node 服务展示结果
 
+- 开发模式基于内存中构建，相比于将文件写入磁盘的操作，存储在内存中不会导致磁盘读写操作，可以提升性能速度
+- 内存中构建配合`HMR`使用，可以不用刷新页面实时查看代码更改的效果
+
 - webpack-dev-middleware 是 node 和 webpack 沟通的桥梁
 
 ```js
