feat: add some articals

--- a/docs/project/hview-ui/组件封装.md
+++ b/docs/project/hview-ui/组件封装.md
@@ -1,1 +1,22 @@
-# 关于组件封装的一些
+# 关于组件封装的技巧
+
+## 样式编写
+
+- 尽量使用低权值
+- 定义一些内置类名
+
+## template 
+
+- 内容是固定就写死，不确定部分就使用slot
+- 定义一些 slot 和 默认slot，用户传入 slot 就用传入的，否则使用默认 slot （便捷性和可扩展性）
+
+## 组件行为
+
+- 把组件的行为分为基本行为和业务行为，每个行为都给父组件一个监听事件
+- 为了更好的扩展可以拆分某个行为的前中后等生命周期
+
+## props
+
+- 组件本身行为相关的数据内部定义，业务相关的数据由父组件传入
+- 组件本身尽可能少写 data
+  
