feat: udpate article

--- a/docs/浏览器原理/知识总结.md
+++ b/docs/浏览器原理/知识总结.md
@@ -1,16 +1,16 @@
 # 浏览器相关知识总结
 
 ## 进程、线程、协程
-1. 进程是资源分配的最小单位，线程是cpu调度的最小单位
-2. 浏览器的每一个tab都是一个进程
-3. 线程是不能单独存在的，由进程来管理和启动的，一个进程可以并发多个线程，每个线程并行执行不同的任务，进程中的某一个线程执行出错都会导致整个进程崩溃
-4. 同一个进程下的线程之间可以直接通信和获取数据
-5. 协程是开发人员调度的，协程的目的就是当出现长时间的I/O操作时，通过让出目前的协程调度，执行下一个任务的方式
-##### 并行处理
- 线程是不能单独存在的，是由进程来管理和启动的 
-- 那什么是进程呢？
-- 操作系统给一个程序创建一块内存来存放代码，运行中的数据和一个执行任务的主进程我们把这个环境叫做进程
-#####  单进程浏览器存在的问题
+- 当我们启动某个程序时，操作系统会给该程序创建一块内存(当程序关闭时，该内存空间就会被回收)，用来存放代码、运行中的数据和一个执行任务的主线程，这样的一个运行环境就叫进程；浏览器的每一个tab都是一个进程
+
+## 线程
+- 线程是不能单独存在的，由进程来管理和启动的，一个进程可以并发多个线程，每个线程并行执行不同的任务，进程中的某一个线程执行出错都会导致整个进程崩溃
+- 同一个进程下的线程之间可以直接通信和获取数据
+
+## 协程
+- 协程是开发人员调度的，协程的目的就是当出现长时间的I/O操作时，通过让出目前的协程调度，执行下一个任务的方式
+
+##  单进程浏览器存在的问题
 1. 不稳定
     - 插件和渲染引擎模块很容易导致浏览器崩溃
 2. 不流畅
@@ -18,12 +18,45 @@
     - 页面的内存泄漏也是进程变慢的一个重要原因，当我们运行一个复杂的页面再关闭时，存在内存不能完全回收导致内存占用越来越高，浏览器变慢。
 3. 不安全
     - 一个进程中的线程是可以共享数据的，那 js 线程就可以随意访问其他线程的数据
-##### 多进程浏览器
-1. 浏览器进程
+
+
+## 多进程浏览器
+1. 浏览器主进程
 2. 渲染进程
 3. GPU进程
 4. 网络进程
 5. 插件进程
+
+## 渲染进程
+
+- 我们平时看到的浏览器呈现出页面过程中，大部分工作都是在渲染进程中完成，所以看一下渲染进程中的线程
+
+    1. js 主线程：负责 js 解析执行
+    2. 定时器线程： 处理定时器
+    3. 网络线程： 处理网络请求和响应
+    4. 事件线程：控制事件循环，上面两个完成时，把他们的回调放入异步任务队列中
+    5. 渲染线程：解析绘制页面
+    6. GPU渲染线程：在某些情况下，浏览器可以使用 GPU 来加速页面渲染，这包括在 GPU 渲染线程中进行图形渲染和合成操作
+    7. 工作线程：工作线程允许在后台运行 JavaScript 代码，以避免阻塞主线程。Web Workers 是常见的工作线程的使用场景，它们可以执行耗时的任务而不影响主线程的响应性
+
+
+## 事件循环
+- js分为同步任务和异步任务，同步任务在主线程中执行，当执行栈中的同步任务执行完毕就会读取事件触发线程的任务队列，将需要执行的回调函数添加到执行栈中执行，反反复复就是事件循环
+- 同步任务执行完之后会先执行微任务队列里面的微任务，再执行下一个宏任务
+
+## 宏任务和微任务
+##### 常见的宏任务：
+- 主代码块、
+- setTimeout、
+- setInterval、
+- setImmediate ()-Node、
+- requestAnimationFrame ()-浏览器
+##### 常见的微任务：
+- process.nextTick ()-Node
+- Promise.then()、
+- catch、finally、
+- Object.observe、
+- MutationObserver
 
 
 ## 浏览器事件机制
@@ -45,19 +78,3 @@
 ##### 如何阻止事件冒泡、阻止原生js事件
     - e.stopPropagation()
     - preventDefault()，或者在js中return false
-## 事件循环
-- js分为同步任务和异步任务，同步任务在主线程中执行，当执行栈中的同步任务执行完毕就会读取事件触发线程的任务队列，将需要执行的回调函数添加到执行栈中执行，反反复复就是事件循环
-- 同步任务执行完之后会先执行微任务队列里面的微任务，再执行下一个宏任务
-## 宏任务和微任务
-##### 常见的宏任务：
-- 主代码块、
-- setTimeout、
-- setInterval、
-- setImmediate ()-Node、
-- requestAnimationFrame ()-浏览器
-##### 常见的微任务：
-- process.nextTick ()-Node
-- Promise.then()、
-- catch、finally、
-- Object.observe、
-- MutationObserver
