--- a/docs/计算机网络/知识总结.md
+++ b/docs/计算机网络/知识总结.md
@@ -80,9 +80,11 @@
 
 ## 强缓存
 强缓存通过`expired`和`cache-control`两个字段来控制，用来表示资源的缓存时间
+
 ##### expired
 1. http1.0规范，如：Expires：expires:Fri, 14 Apr 2017 10:47:02 GMT
 2. 缺点：失效时间是一个绝对时间，当客户端和服务器时间偏差较大时，就会出现缓存缓存混乱
+
 ##### cache-control（优先级比上面的高）
 1. http1.1规范，如：cache-control:max-age=2，表示两秒后失效
 2. 一些属性值： 
@@ -90,21 +92,26 @@
   - no-store：直接禁止浏览器缓存数据
   - pubilc：可以被所有用户缓存，
   - private：只能被终端用户的浏览器缓存，不允许cdn等中继缓存服务器缓存
+
 ## 协商缓存
-- 涉及两组字段：Etag和If-None-Match、Last-Modified和If-Modified-Since
+- 涉及两组字段：Etag 和 Last-Modified
 - 网页的静态资源更改频率没有那么高的时候就设置协商缓存
+
 ##### last-modifined
-1. 记录资源的最后修改时间，如：Last-Modify: Thu,31 Dec 2037 23:59:59 GMT
+1. 记录资源的最后修改时间（绝对时间 GMT），比较适用于静态资源
+2. 不足：  
+  - 时间精度问题
+
 ##### etag（优先级比上面的高）
 1. http1.1规范
 2. 解决一些Last-Modified比较难解决的问题： 
     - 一些文件内容不改变，改变的只是时间，不希望客户端重新请求
     - 某些文件修改的太频繁，1s修改n次，If-Modified-Since检查不到
     - 某些服务器不能精确得到文件的最后修改时间
-## 关于刷新缓存的变化
-1. 标签/url回车进入：看看有无no-cache/no-store，没有则先走强缓存，缓存过期再走协商缓存
-2. F5普通刷新：浏览器将 cache-control ： max-age = 0，让缓存立即过期，直接走协商缓存路线
-3. ctrl + F5 强制刷新：浏览器会强行设置 no-cache，强制获取最新的资源，就连 if-modified-since 等其他缓存协议字段都会被吃掉
+3. 不足：
+  - 需要服务器计算资源的哈希值，增加计算开销
+  - 值相对较长，导致响应头比较大
+
 ## http请求页面流程
 客户端第一次请求服务端时，服务端会返回 etag 和 last-modifined 给客户端
 当客户端再次请求服务端时：
@@ -113,6 +120,13 @@
     - 若相同，就将If-None-Match的值设为false，返回状态304，客户端继续使用本地缓存，不解析服务器端发回来的数据。
     - 若不相同就将If-None-Match的值设为true，返回状态为200，客户端重新机械服务器端返回的数据；
 3. 有last-modifined，客户端还会通过If-Modified-Since头将先前服务器端发过来的最后修改时间戳发送给服务器，服务器端通过这个时间戳判断客户端的页面是否是最新的，如果不是最新的，则返回最新的内容，如果是最新的，则返回304，客户端继续使用本地缓存。
+
+## 关于刷新缓存的变化
+1. 标签/url回车进入：看看有无no-cache/no-store，没有则先走强缓存，缓存过期再走协商缓存
+2. F5普通刷新：浏览器将 cache-control ： max-age = 0，让缓存立即过期，直接走协商缓存路线
+3. ctrl + F5 强制刷新：浏览器会强行设置 no-cache，强制获取最新的资源，就连 if-modified-since 等其他缓存协议字段都会被吃掉
+
+
 ## Tcp的三次握手：
 1. 第一次：客户端给服务器发送一个SYN=1、seqNumber=J（客户端的初始序列号）
 2. 第二次：服务器返回客户端 SYN =1 、ACK=J+1 、seqNumber+K（服务器的初始序列号）
