feat: udpate article

--- a/docs/浏览器原理/知识总结.md
+++ b/docs/浏览器原理/知识总结.md
@@ -34,15 +34,14 @@
     1. js 主线程：负责 js 解析执行
     2. 定时器线程： 处理定时器
     3. 网络线程： 处理网络请求和响应
-    4. 事件线程：控制事件循环，上面两个完成时，把他们的回调放入异步任务队列中
+    4. 事件触发线程：控制事件循环，上面两个完成时，把他们的回调放入异步任务队列中
     5. 渲染线程：解析绘制页面
     6. GPU渲染线程：在某些情况下，浏览器可以使用 GPU 来加速页面渲染，这包括在 GPU 渲染线程中进行图形渲染和合成操作
     7. 工作线程：工作线程允许在后台运行 JavaScript 代码，以避免阻塞主线程。Web Workers 是常见的工作线程的使用场景，它们可以执行耗时的任务而不影响主线程的响应性
 
 
 ## 事件循环
-- js分为同步任务和异步任务，同步任务在主线程中执行，当执行栈中的同步任务执行完毕就会读取事件触发线程的任务队列，将需要执行的回调函数添加到执行栈中执行，反反复复就是事件循环
-- 同步任务执行完之后会先执行微任务队列里面的微任务，再执行下一个宏任务
+- js分为同步任务和异步任务，同步任务在主线程中执行，遇到异步就交给对应的线程，异步执行完之后，事件触发线程会把相应的回调函数加入到任务队列中，同步任务执行完毕之后就会获取任务队列的任务执行
 
 ## 宏任务和微任务
 ##### 常见的宏任务：
