--- a/docs/project/hview-ui/组件封装.md
+++ b/docs/project/hview-ui/组件封装.md
@@ -1,22 +1,44 @@
 # 关于组件封装的技巧
 
-## 样式编写
+  
+## 便捷性性和可扩展性
+
+- 组件的封装其实是一个易用性和可扩展性的权衡
+    - 封装得越多，组件便捷性就越高，可扩展性就越低
+    - 封装得越少，组件的可扩展性就越高，相对的，便捷性就越低
+- 所以要根据使用的场景来控制组件的封装粒度
+
+## 一、样式编写
 
 - 尽量使用低权值
-- 定义一些内置类名
+- 定义一些内置类名（比如组件大小的定义，可以有小，中，大的内置类名）
 
-## template 
+## 二、组件结构 
 
 - 内容是固定就写死，不确定部分就使用slot
 - 定义一些 slot 和 默认slot，用户传入 slot 就用传入的，否则使用默认 slot （便捷性和可扩展性）
 
-## 组件行为
+#### 举个栗子
+
+- 比如一个弹窗组件，确定取消，关闭按钮大多数情况之下是固定的，头部标题发多数情况需要改变，那就可以的判断用户有没有传入 slot ，如果有那就用传进来的，如果没有那就用默认的
+
+- 再者，子组件的一些数据可以作为 slot 上的一个属性传递给父组件，这样有时候一些数据就不用使用事件那么麻烦来传了
+
+## 三、组件行为
 
 - 把组件的行为分为基本行为和业务行为，每个行为都给父组件一个监听事件
 - 为了更好的扩展可以拆分某个行为的前中后等生命周期
 
-## props
+#### 举个栗子
+
+- 比如一个弹窗组件，确定取消，关闭按钮都是用来关闭组件弹窗的，那这种行为就可以直接写在组件内部；而弹窗关闭之后的所要做的事情就应该交给父组件去做（给父组件一个监听事件）。
+- 定义前中后生命周期，弹窗前需要做什么，弹窗后的事件等等，增加组件的可扩展性
+
+
+## 四、props
 
 - 组件本身行为相关的数据内部定义，业务相关的数据由父组件传入
 - 组件本身尽可能少写 data
-  
+- props 也可以增强组件的可扩展性（比如可以传入一个布尔值来控制一个元素是否显示）
+
+
