feat: update my page

--- a/docs/计算机网络/知识总结.md
+++ b/docs/计算机网络/知识总结.md
@@ -1,11 +1,13 @@
 # http知识总结
 
 ## get和post的区别
-1. 页面刷新，post的数据会重新提交
-2. GET 方法向 URL 添加数据；URL 的长度是受限制的（URL 的最大长度是 2048 个字符）
-3. Get 请求报文中实体部分为空，Post 请求报文中实体部分一般为向服务器发送的数据。
-4. GET安全性差，因为发送时数据是url的一部分
-5. GET请求会被浏览器主动缓存，因为请求的 url 会被保留在历史记录中。
+
+- 其实 get 和 post 在 http 层面的区别并不大，最大的区别就是请求方式不一样
+1. 页面刷新，post的数据会重新提交（防止用户不小心重复提交）（涉及到幂等性的问题，因为 post 通常会改变数据）
+2. URL 的长度是受限制的（URL 的最大长度是 2048 个字符）http 并没有限制，只是浏览器限制了；
+3. 其实 get 和 post 请求参数都可以放在请求体中，只是 get 放在 url 中习惯了
+4. get 安全性相对差 (csrf)
+5. get 请求会被浏览器主动缓存 (默认的缓存策略)
 
 ## http版本区别
 ##### http/0.9
