docs(md): update my blog

--- a/docs/项目搭建/工程化.md
+++ b/docs/项目搭建/工程化.md
@@ -1,3 +1,30 @@
-# 工程化 
+# 项目初始化
 
-## js 工具链
+
+## gitflow工作流
+
+## 代码规范（结合项目技术选型进行配置）
+
+## 操作
+
+- 连接到远程仓库：
+    - git remote add origin https://github.com/Groot303/nw-avplayer
+
+- 回退到上一个提交：（撤销暂存区的提交，但保留工作目录中的更改）
+    - git reset HEAD~
+
+- 回退到上一个提交并保留更改：如果你想回退到上一个提交，并保留工作目录中的更改，可以运行
+    - git reset --soft HEAD~
+
+
+
+## git 问题
+
+- fatal: refusing to merge unrelated histories
+
+原因：
+- 远程提交和本地提交没有相同的提交历史
+
+解决：
+- 结尾添加 --allow-unrelated-histories
+
