docs: update my article

--- a/docs/html&css&js/JavaScript/函数柯里化.md
+++ b/docs/html&css&js/JavaScript/函数柯里化.md
@@ -167,3 +167,26 @@ validatePhoneCurry(137****2125);
 validatePhoneCurry(191****5236);
 ```
 这样就省略了很多不必要的参数
+
+## 实现一个柯里化方法
+
+```js
+
+function add(...args1) {
+    let list = args1
+
+    const fn = function (...args2) {
+        list = list.concat(args2)
+        return fn
+    }
+
+    fn.valueOf = function () {
+        return list.reduce((a, b) => { return a + b }, 0)
+    }
+
+    return fn
+}
+
+add(1, 2, 3).valueOf()
+add(1, 2)(3)(4, 5).valueOf()
+```
