--- a/docs/html&css&js/JavaScript/数组的方法.md
+++ b/docs/html&css&js/JavaScript/数组的方法.md
@@ -44,7 +44,52 @@
 
 
 ::boom:: **数组去重的方法**
-- set() + Array.from()
-- 双层循环 + splice()
-- 循环 + includes/indexOf()：返回索引，没找到返回-1
-- filter()+indexOf()
+1. set() + Array.from()
+```js
+const arr = [1, 1, 1, 3, 2]
+
+function deduplication() {
+    const set = new Set(arr)
+    return Array.from(set)
+
+}
+```
+2. 循环 + includes/indexOf()：返回索引，没找到返回-1
+```js
+const arr = [1, 1, 1, 3, 2]
+
+function deduplication() {
+    const resArr = []
+    arr.forEach(item => {
+        if (!resArr.includes(item)) {
+            resArr.push(item)
+        }
+    })
+    return resArr
+}
+```
+3. filter()+indexOf()
+```js
+const arr = [1, 1, 1, 3, 2]
+
+function deduplication() {
+    return arr.filter((item, index, array) =>
+        array.indexOf(item) === index
+    )
+}
+```
+4. reduce
+```js
+const arr = [1, 1, 1, 3, 2]
+
+function deduplication() {
+    return arr.reduce((pre, cur) => {
+        if (!pre.includes(cur)) {
+            return [...pre, cur]
+        } else {
+            return pre
+        }
+    }, [])
+}
+
+```
