--- a/docs/TypeScript/知识总结.md
+++ b/docs/TypeScript/知识总结.md
@@ -5,6 +5,98 @@
 ## ts 和 js 的区别是什么？
 - ts 可以在开发编译时就会发现错误，js 需要运行才会暴露
 - ts 是一个强类型语言，代码可读性强，利于项目的维护
+
+## TypeScript 中 type 和 interface 的区别?
+- 相同点：
+  -  都可以描述 '对象' 或者 '函数'
+  -  都允许拓展; interface 用 extends， type 用联合类型（&）；两者还可以相互继承
+
+```ts
+interface User extends Name{
+    age: number
+}
+
+type Name = {
+    name: string
+}
+type User = Name & { age: number }
+
+type Name = {
+    name: String
+}
+interface User extends Name {
+    age: number
+}
+
+interface Name = {
+    name: string
+}
+
+type User = Name & {
+    age: number
+}
+```
+
+- 不同点：
+  -  type 可以声明基本类型，联合类型，元组
+  -  type 可以使用 in 关键字生成映射类型
+```ts
+type User = "name" | "sex"
+
+type User1 = {
+    [key in User]: string //类似for...in..
+}
+
+const stu: User1 = {
+    name: "groot",
+    sex: "man",
+}
+```
+  -  interface 会自动合并重复的声明，type 报错
+
+
+## 什么是泛型
+
+- 简单来说就是类型参数，不写死类型，可以让类型更灵活
+
+```ts
+interface IUser<T> {
+    name: string,
+    age: number,
+    hobby: T
+}
+
+interface IHobby {
+    type: string,
+    name: string
+}
+
+const person: IUser<IHobby> = {
+    name: "groot",
+    age: 18,
+    hobby: {
+        type: "ball",
+        name: "basketball"
+    }
+}
+
+```
+## keyof 和 typeof 关键字的作用？
+- keyof 索引类型查询操作符： 获取索引类型的属性名，构成联合类型
+- typeof： 获取一个变量或对象的类型。
+
+```ts
+const obj = { 
+  name: "groot",
+  age: 18
+}
+// typeof obj -> { name: string, age: number }
+// keyof obj -> "name" | "age"
+```
+
+## TypeScript 中 any 类型的作用是什么？
+- 为编程阶段还不清楚类型的变量指定一个类型。 这些值可能来自于动态的内容，比如来自用户输入或第三方代码库。 这种情况下，我们不希望类型检查器对这些值进行检查而是直接让它们通过编译阶段的检查。
+
 ## TypeScript 中 ?.   ??   !   !.   _ 等符号的含义？
 - ?. 可选链： 遇到 null 和 undefined 可以立即停止表达式的运行。
 - ?? 空值合并运算符：当左侧操作数为 null 或 undefined 时，其返回右侧的操作数，否则返回左侧的操作数。
@@ -15,8 +107,9 @@
 - const 和 readonly: const可以防止变量的值被修改，readonly可以防止变量的属性被修改。
 - 枚举和常量枚举: 常量枚举只能使用常量枚举表达式，并且不同于常规的枚举，它们在编译阶段会被删除。 常量枚举成员在使用的地方会被内联进来。 之所以可以这么做是因为，常量枚举不允许包含计算成员。
 - 接口和类型别名: 两者都可以用来描述对象或函数的类型。与接口不同，类型别名还可以用于其他类型，如基本类型（原始值）、联合类型、元组。
-## TypeScript 中 any 类型的作用是什么？
-- 为编程阶段还不清楚类型的变量指定一个类型。 这些值可能来自于动态的内容，比如来自用户输入或第三方代码库。 这种情况下，我们不希望类型检查器对这些值进行检查而是直接让它们通过编译阶段的检查。
+
+
+
 ## TypeScript 中 any、never、unknown、null & undefined 和 void 有什么区别？
 - any: 动态的变量类型（失去了类型检查的作用）。
 - never: 永不存在的值的类型。例如：never 类型是那些总是会抛出异常或根本就不会有返回值的函数表达式或箭头函数表达式的返回值类型。
@@ -33,15 +126,7 @@ function getLength(something: string | number): number {
 }
 //Property 'length' does not exist on type 'number'.
 
-## TypeScript 中 type 和 interface 的区别?
-- 相同点：
-  a. 都可以描述 '对象' 或者 '函数'
-  b. 都允许拓展(extends)
-- 不同点：
-  c. type 可以声明基本类型，联合类型，元组
-  d. type 可以使用 typeof 获取实例的类型进行赋值
-  e. 多个相同的 interface 声明可以自动合并
-使用 interface 描述‘数据结构’，使用 type 描述‘类型关系’
+
 ##  TypeScript 模块的加载机制
  假设有一个导入语句 import { a } from "moduleA";
 - 首先，编译器会尝试定位需要导入的模块文件，通过绝对或者相对的路径查找方式；
@@ -52,6 +137,3 @@ function getLength(something: string | number): number {
 - private：被此限定符修饰的成员是只可以被类的内部访问；
 - protected： 被此限定符修饰的成员是只可以被类的内部以及类的子类访问;
 - readonly：关键字将属性设置为只读的。 只读属性必须在声明时或构造函数里被初始化。
-## keyof 和 typeof 关键字的作用？
-- keyof 索引类型查询操作符： 获取索引类型的属性名，构成联合类型
-- typeof： 获取一个变量或对象的类型。
