docs: add some answer

--- a/docs/TypeScript/知识总结.md
+++ b/docs/TypeScript/知识总结.md
@@ -54,6 +54,10 @@ const stu: User1 = {
 ```
   -  interface 会自动合并重复的声明，type 报错
 
+- 使用
+  - 官方推荐使用 interface， 因为联合类型和交叉类型很常用所以保持代码统一可以使用type
+  - 对于 React 组件中 props 及 state，推荐使用 type，这样能够保证使用组件的地方不能随意在上面添加属性。 如果有自定义需求，可通过 HOC（高阶组件）二次封装。 
+  - 编写三方库时使推荐使用 interface，其更加灵活自动的类型合并可应对未知的复杂使用场景。
 
 ## 什么是泛型
 
