--- a/docs/计算机网络/知识总结.md
+++ b/docs/计算机网络/知识总结.md
@@ -36,6 +36,55 @@
 - 将底层依赖的 TCP 改成 UDP，从而彻底解决了这个问题。UDP 相对于 TCP 而言最大的特点是传输数据时不需要建立连接，可以同时发送多个数据包，所以传输效率很高，缺点就是没有确认机制来保证对方一定能收到数据。
 
 
+## tcp 和 udp
+
+- TCP（Transmission Control Protocol）:
+
+  - 可靠性： TCP 是一种可靠的协议，它通过使用序号、确认和重传机制来确保数据的可靠传输。如果一个数据包在传输过程中丢失或损坏，TCP 将负责重新传输。
+
+  - 有连接： TCP 是一种面向连接的协议，建立连接后进行数据传输，然后关闭连接。这确保了数据的顺序和完整性。
+
+  - 流式传输： TCP 提供了流式传输，数据被视为一连串的字节流，而不是独立的数据包。
+
+  - 慢启动和拥塞控制： TCP 使用慢启动和拥塞控制机制，以避免网络拥塞和提高性能。
+
+- UDP（User Datagram Protocol）:
+
+  - 不可靠性： UDP 是一种无连接、不可靠的协议，它不提供像 TCP 那样的重传机制和确认机制。因此，数据包可能会在传输中丢失或无序。
+
+  - 无连接： UDP 是一种无连接的协议，每个数据包都是独立的，相互之间没有关联。
+
+  - 面向报文： UDP 是一种面向报文的协议，发送方的每个数据包都是独立的报文，而不是像 TCP 那样的字节流。
+
+  - 低延迟： 由于不涉及复杂的重传机制和连接建立，UDP 通常具有较低的延迟。
+
+> TCP 使用场景：
+- Web 浏览器访问网站（HTTP 使用 TCP）
+- 电子邮件传输（SMTP 使用 TCP）
+- 文件传输协议（FTP 使用 TCP）
+- 远程登录协议（SSH 使用 TCP）
+- TCP 的优势在于它的可靠性，适用于那些要求数据完整性和顺序性的应用场景。
+
+> UDP 使用场景：
+- 实时音视频传输（例如 VoIP、视频会议）
+- DNS 查询
+- 游戏应用
+- 广播和多播通信
+- UDP 的优势在于它的低延迟和简单性，适用于那些可以容忍一些数据丢失，但需要更快传输速度的应用场景。
+
+## 如何让UDP可靠？
+
+由于UDP本身是不可靠的，如果需要在UDP上实现可靠性，应用层需要自行处理这些问题。一些常见的方法包括：
+
+- 重传机制： 应用层可以实现自己的重传机制，检测数据包的丢失并进行重传。
+
+- 确认机制： 应用层可以实现确认机制，接收方收到数据包后发送确认，发送方等待一定时间来接收确认，如果没有收到确认，则进行重传。
+
+- 序号和顺序控制： 应用层可以引入序号和顺序控制，以确保数据包的顺序和完整性。
+
+
+
+
 ## http的优点和缺点
 - 优点：
   - 简单快速：客户向服务器请求服务时，只需传送请求方法和路径。由于 HTTP 协议简单，使得 HTTP 服务器的程序规模小，因而通信速度很快
